force-app/main/default/objects/System_Optimization_and_Issue_Management__c/System_Optimization_and_Issue_Management__c.object-meta.xml
<CustomObject>
    <label>System Optimization and Issue Management</label>
    <nameField>
        <displayFormat>Issue-{00000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Optimization and Issue Management</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>