force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>