force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Function_Module__c.field-meta.xml
<CustomField>
    <fullName>Function_Module__c</fullName>
    <label>Function Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Sales Forecast Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>