force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Improvement and Optimization</fullName>
            </value>
            <value>
                <fullName>Maloperation</fullName>
            </value>
            <value>
                <fullName>Explanation and Clarification</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>New Requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>