force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Related_Record_Link_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Link_Number_Id__c</fullName>
    <label>Related Record Link/Number/Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>