force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>