force-app/main/default/objects/System_Optimization_and_Issue_Management__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <defaultValue>$User.LastName</defaultValue>
    <label>Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>