force-app/main/default/objects/System_Optimization_and_Issue_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Submitter__c</columns>
    <columns>Submit_Date__c</columns>
    <columns>Function_Module__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>