force-app/main/default/objects/System_Optimization_and_Issue_Management__c/listViews/AllOpen.listView-meta.xml
<ListView>
    <fullName>AllOpen</fullName>
    <columns>NAME</columns>
    <columns>Submitter__c</columns>
    <columns>Submit_Date__c</columns>
    <columns>Function_Module__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Re-open,Pending,Processing,To be tested</value>
    </filters>
    <label>Open</label>
</ListView>